fix visible issue w/ menu options covering logo in mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -433,7 +433,7 @@
         //background-color: maroon;
         //display: none; //hide menu options by default 
         position: absolute;
-        top: 80px;
+        top: 85px;
         right: 20px;
         z-index:1;
         background-color: $light-background-color;
